# stellar-giftcard

./: .gitignore  README.md
.github/workflows/: ci.yml
contracts/: Cargo.toml  compile_error.txt
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/vault/: Cargo.toml  check_out.txt  test_error.txt
contracts/vault/src/: lib.rs  test.rs
contracts/vault/test_snapshots/test/: test_hash_lock_failure.1.json  test_hash_lock_success.1.json  test_time_lock_failure.1.json  test_time_lock_success.1.json
frontend/: package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/claim/[vault_id]/: page.tsx
frontend/src/components/: WalletConnect.tsx
frontend/src/utils/: crypto.ts  freighter.ts  soroban-contract.ts
